<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etValueA"
        android:layout_width="266dp"
        android:layout_height="64dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/altura"
        android:importantForAutofill="no"
        android:inputType="number|numberSigned"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etValueMaior"
        android:layout_width="266dp"
        android:layout_height="64dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/baseMaior"
        android:importantForAutofill="no"
        android:inputType="number|numberSigned"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValueA" />

    <EditText
        android:id="@+id/etValueMenor"
        android:layout_width="266dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/baseMenor"
        android:importantForAutofill="no"
        android:inputType="number|numberSigned"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValueMaior" />

    <TextView
        android:id="@+id/authorInfo"
        android:layout_width="379dp"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        android:text="@string/author_data"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/mainTitle"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/etValueA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="243dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValueMenor" />

    <TextView
        android:id="@+id/results"
        android:layout_width="220dp"
        android:layout_height="31dp"
        android:layout_marginTop="44dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
